--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,10 @@ repositories {
 
 dependencies {
     implementation 'org.jsoup:jsoup:1.14.3'
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+    testCompileOnly 'org.projectlombok:lombok:1.18.24'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
 }
 
 test {
