--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,5 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
     testCompileOnly 'org.projectlombok:lombok:1.18.24'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
-}
-
-test {
-    useJUnitPlatform()
+    implementation 'com.google.code.gson:gson:2.9.0'
 }
